<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A28AFF"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider2"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:background="#4000A2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fileName"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="#4000A2"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/fileName"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/message"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <View
        android:id="@+id/divider"
        android:layout_width="178dp"
        android:layout_height="3dp"
        android:background="#D50000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileName" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="33dp"
        android:background="@color/white"
        android:gravity="start|top"
        android:hint="@string/type_text_here"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

</androidx.constraintlayout.widget.ConstraintLayout>